[gd_scene load_steps=4 format=1]

[ext_resource path="res://Entities/Ship/ship.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="ShipRigidBody2D" type="RigidBody2D"]

input/pickable = true
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="ShipArea2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3.11538, 0, 0, 3.15385, 0.309998, 0.262299 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/mask = 4

[node name="ShipSprite" type="Sprite" parent="ShipArea2D"]

texture = ExtResource( 2 )

[node name="ShipCollisionShape2D" type="CollisionShape2D" parent="ShipArea2D"]

transform/pos = Vector2( 0.309998, 0.262299 )
transform/scale = Vector2( 3.11538, 3.15385 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="area_enter" from="ShipArea2D" to="." method="_on_ShipArea2D_area_enter"]


